--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,138 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'terminal'
+baseurl = "https://colefuerth.github.io/"
+languageCode = "en-us"
+theme = "terminal"
+paginate = 5
+enableGitInfo = true
+enableEmoji = true
+
+[params]
+  # dir name of your main content (default is `content/posts`).
+  # the list of set content will show up on your index page (baseurl).
+  contentTypeName = "posts"
+
+  # ["orange", "blue", "red", "green", "pink"]
+  themeColor = "blue"
+
+  # if you set this to 0, only submenu trigger will be visible
+  showMenuItems = 4
+
+  # show selector to switch language
+  showLanguageSelector = false
+
+  # set theme to full screen width
+  fullWidthTheme = true
+
+  # center theme with default width
+  centerTheme = false
+
+  # if your resource directory contains an image called `cover.(jpg|png|webp)`,
+  # then the file will be used as a cover automatically.
+  # With this option you don't have to put the `cover` param in a front-matter.
+  autoCover = true
+
+  # set post to show the last updated
+  # If you use git, you can set `enableGitInfo` to `true` and then post will automatically get the last updated
+  showLastUpdated = false
+
+  # set a custom favicon (default is a `themeColor` square)
+  # favicon = "favicon.ico"
+
+  # Provide a string as a prefix for the last update date. By default, it looks like this: 2020-xx-xx [Updated: 2020-xx-xx] :: Author
+  # updatedDatePrefix = "Updated"
+
+  # set all headings to their default size (depending on browser settings)
+  oneHeadingSize = false # non-default
+
+  # whether to show a page's estimated reading time
+  # readingTime = false # default
+
+  # whether to show a table of contents
+  # can be overridden in a page's front-matter
+  Toc = true # non-default
+
+  # set title for the table of contents
+  # can be overridden in a page's front-matter
+  # TocTitle = "Table of Contents" # default
+
+  # Add custom css 
+  # css = ["/css/main.css"]
+
+
+# [params.twitter]
+#   # set Twitter handles for Twitter cards
+#   # see https://developer.twitter.com/en/docs/tweets/optimize-with-cards/guides/getting-started#card-and-content-attribution
+#   # do not include @
+#   creator = ""
+#   site = ""
+
+[languages]
+  [languages.en]
+    languageName = "English"
+    title = "Headquarters of undemalum"
+    subtitle = "This serve as my website, CAS portfolio and resorce for IB students"
+    owner = ""
+    keywords = ""
+    copyright = ""
+    menuMore = "CAS"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    missingContentMessage = "Page not found..."
+    missingBackButtonLabel = "Back to home page"
+
+    [languages.en.params.logo]
+      logoText = "Home"
+      logoHomeLink = "https://undemalum.github.io/portfolio/"
+
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "About me"
+        url = "/about"
+        weight = 1
+      [[languages.en.menu.main]]
+        identifier = "posts"
+        name = "Posts"
+        url = "/"
+        weight = 2
+      [[languages.en.menu.main]]
+        identifier = "projects"
+        name = "My projects"
+        url = "/projects"
+        weight = 3
+      [[languages.en.menu.main]]
+        identifier = "ib-resources"
+        name = "IB resorces"
+        url = "/ib-resources"
+        weight = 4
+      [[languages.en.menu.main]]
+        identifier = "creativity"
+        name = "Creativity"
+        url = "/creativity"
+        weight = 5
+      [[languages.en.menu.main]]
+        identifier = "activity"
+        name = "Activity"
+        url = "/activity"
+        weight = 6
+      [[languages.en.menu.main]]
+        identifier = "service"
+        name = "Service"
+        url = "/service"
+        weight = 7
+      [[languages.en.menu.main]]
+        identifier = "cas-project"
+        name = "Cas project"
+        url = "/cas-project"
+        weight = 8
+
+# # Allow rendering of custom html
+# [markup]
+#   [markup.goldmark]
+#     [markup.goldmark.renderer]
+#       unsafe = true
+#   [markup.tableOfContents]
+#     endLevel = 2
+#     ordered = false
+#     startLevel = 1
