--- a/config.toml
+++ b/config.toml
@@ -4,11 +4,13 @@ theme = "terminal"
 paginate = 5
 enableGitInfo = true
 enableEmoji = true
+title = "Cole Portfolio"
+copyright = "Cole Fuerth"
 
 [params]
   # dir name of your main content (default is `content/posts`).
   # the list of set content will show up on your index page (baseurl).
-  contentTypeName = "showcase"
+  contentTypeName = "home"
 
   # ["orange", "blue", "red", "green", "pink"]
   themeColor = "blue"
@@ -20,7 +22,7 @@ enableEmoji = true
   showLanguageSelector = false
 
   # set theme to full screen width
-  fullWidthTheme = true
+  fullWidthTheme = false
 
   # center theme with default width
   centerTheme = false
@@ -48,14 +50,14 @@ enableEmoji = true
 
   # whether to show a table of contents
   # can be overridden in a page's front-matter
-  Toc = true # non-default
+  Toc = false # non-default
 
   # set title for the table of contents
   # can be overridden in a page's front-matter
   # TocTitle = "Table of Contents" # default
 
   # Add custom css 
-  # css = ["/css/main.css"]
+  custom_css = ["css/image.css"]
 
 
 # [params.twitter]
@@ -68,12 +70,12 @@ enableEmoji = true
 [languages]
   [languages.en]
     languageName = "English"
-    title = "Headquarters of undemalum"
-    subtitle = "This serve as my website, CAS portfolio and resorce for IB students"
-    owner = ""
+    title = "Cole Fuerth"
+    subtitle = "This serves as my portfolio for my projects and other things I have done."
+    owner = "Cole Fuerth"
     keywords = ""
-    copyright = ""
-    # menuMore = "CAS"
+    copyright = "Cole Fuerth"
+    menuMore = "CAS"
     readMore = "Read more"
     readOtherPosts = "Read other posts"
     newerPosts = "Newer posts"
@@ -82,8 +84,8 @@ enableEmoji = true
     missingBackButtonLabel = "Back to home page"
 
     [languages.en.params.logo]
-      logoText = "Home"
-      logoHomeLink = "/showcase"
+      logoText = "Cole Fuerth"
+      logoHomeLink = "/home"
 
     [languages.en.menu]
       # [[languages.en.menu.main]]
@@ -94,13 +96,15 @@ enableEmoji = true
       [[languages.en.menu.main]]
         identifier = "about"
         name = "About me"
-        url = "/showcase/about"
-        weight = 2
+        url = "/home/about"
+        weight = 20
+        # add custom css claass
+        # cssClass = "custom-class"
       [[languages.en.menu.main]]
         identifier = "projects"
         name = "My projects"
-        url = "/showcase/projects"
-        weight = 3
+        url = "/home/projects"
+        weight = 30
 
 # # Allow rendering of custom html
 # [markup]
