--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/terminal"]
 	path = themes/terminal
 	url = git@github.com:colefuerth/hugo-theme-terminal.git
+[submodule "themes/resume"]
+	path = themes/resume
+	url = git@github.com:colefuerth/hugo-resume.git
